feat: add link to original version

--- a/www/index.html
+++ b/www/index.html
@@ -43,7 +43,7 @@
 </div>
 
 <div class="center">
-    <p>Created by <a href="http://madebyevan.com/">Evan Wallace</a> in 2010</p>
+    <p>Created by <a href="http://madebyevan.com/">Evan Wallace</a> in 2010 (<a href="https://madebyevan.com/fsm/">original</a>)</p>
     <p>A few modifications by <a href="https://williamneild.com">William Neild</a> in 2024</p>
 </div>
 
